--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@arcgis/core": "^4.32.10",
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.8.4",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.8",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
